Revert "Fix overlap in official comments"

--- a/style.css
+++ b/style.css
@@ -2155,7 +2155,6 @@ ul {
   text-align: center;
   flex-shrink: 0;
   /*Avoid collapsing elements in Safari*/
-  margin: 15px 0;
 }
 
 /***** Community *****/
